# MerkleTree

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/merkel/: merkel.rs
