[package]
name = "MERKLETREE"
version = "0.1.0"
authors = ["yiranlandtour <yiranlandtour@163.com>"]
edition = "2021"

[dependencies]
bs58 = "0.4.0"
hex = "0.4.3"
rand = "0.9.0"
serde = "1.0.217"
serde_json = "1.0.138"
sha2 = "0.10.8"
thiserror = "2.0.11"
tokio = { version = "1.37.0", features = ["full"] }
